--- a/inicio.css
+++ b/inicio.css
@@ -145,6 +145,11 @@ nav{
 .Marcado{
      color:#FF0000;
 }
+.imagen{
+     display: block;
+     margin-left: auto;
+     margin-right: auto;  
+}
 /*----- Conetedor de redes -------*/
 .contenedor_icono{
      margin-top: 7px;
