--- a/inicio.css
+++ b/inicio.css
@@ -151,10 +151,10 @@ nav{
      width: 1080px;
      height: 482px;
 }
-/*.imagen{
-     width: 80px;
+.imagen{
+     width: 1080px;
      height: 482px;
-}*/
+}
 /*----- Conetedor de redes -------*/
 .contenedor_icono{
      margin-top: 7px;
