--- a/inicio.css
+++ b/inicio.css
@@ -71,7 +71,8 @@ nav{
      margin: 3em 0 0 8.5em;
      font-size:55px;
      padding:2px;
-     margin-bottom: 30%;
+     text-align: center;
+     margin-bottom: 27%;
      text-shadow: #CCC 1px 5px 10px, #CCC -3px 0 10px, #CCC 1px 5px 10px;
 }
 .Title::after {
@@ -113,7 +114,7 @@ nav{
  }
 /* == Quienes somos == */
 .contenedor_inicio{
-     /*margin-top: -95px;*/
+     
      height:100vh;
      min-height:100vh; 
      display: flex;
