--- a/inicio.css
+++ b/inicio.css
@@ -109,11 +109,11 @@ nav{
  	background: url(https://imgur.com/v9tIJLU.jpg) no-repeat;
      background-position: center;
      background-size: cover;
-   /*  -webkit-background-size: 100% 100%;               /* Safari 3.0 */
-    /* -moz-background-size: 100% 100%;                  /* Gecko 1.9.2 (Firefox 3.6) */
-     /*-o-background-size: 100% 100%;                    /* Opera 9.5 */
-    /* background-size: 100% 100%;                       /* Gecko 2.0 (Firefox 4.0) and other CSS3-compliant browsers */
-    /* -moz-border-image: url(bg-image.png) 0;           /* Gecko 1.9.1 (Firefox 3.5) */
+     -webkit-background-size: 100% 100%;               /* Safari 3.0 */
+     -moz-background-size: 100% 100%;                  /* Gecko 1.9.2 (Firefox 3.6) */
+     -o-background-size: 100% 100%;                    /* Opera 9.5 */
+     background-size: 100% 100%;                       /* Gecko 2.0 (Firefox 4.0) and other CSS3-compliant browsers */
+    -moz-border-image: url(bg-image.png) 0;           /* Gecko 1.9.1 (Firefox 3.5) */
      
  }
  .Principal_responsive{
