--- a/base.css
+++ b/base.css
@@ -263,3 +263,132 @@ footer{
 .fa-angle-up{
      animation-name:fa-angle-up;
 }
+
+@media only screen and (max-width: 768px){
+     /**/
+     header nav,
+     header nav li,
+     footer{
+          float:none;
+          width:100%;
+     }
+     nav{
+          width:100%;
+     }
+     .nav_ul{
+          display:none;
+     }
+     .nav_ul_responsive{
+          display:block;
+          position: absolute;
+          width: 100%;
+          background: salmon;
+     }
+     .nav_li-container{
+          width:100%;
+     }
+     .nav_li-container{
+          box-sizing: border-box;
+          margin-right: 3px;
+          width: 30px;
+     }
+     .nav_responsive-button{
+          position: absolute;
+          width: 100%;
+          font-size: 25px;
+          background-color: grey;
+     }
+     .nav_responsive-button{
+          padding: 6px 20px;
+          text-align: right;
+          width: 100%;
+     }
+     .lista{
+          display:inline-block;
+          text-align: center;
+          font-size:16px;  
+          margin-left:0;
+     }
+     .lista_deco{
+          display: flex;
+          color:#FBF7F7;
+          transition:color 0.30s ease-in-out, transform 0.25s ease-in-out;
+          text-decoration:none;
+     }
+     .lista_deco:hover {
+          color:/*#E9967A*/hsl(203, 80%, 62%);
+     }
+     .container_inicio{
+          float: none;
+          width:100%;
+     }
+     .Title{
+          margin-top: 80%;
+     }
+     /*---------Ajuste de imagenes----------*/
+     .Imagen1{
+          float: none;
+          padding-bottom:15px;
+     }
+    .Imagen2{
+          float: none;
+          display:block;
+          margin-left: auto;
+          margin-right:auto;
+          width: 840px;
+          padding-right:15px;
+          padding-left:15px;
+          height: 380px;
+          margin-bottom:35px;
+     }
+     .Imagen3{
+          float:none;
+          display:block;
+          margin-left:auto;
+          margin-right: auto;
+          padding-right:15px;
+          padding-left:15px;
+          width:840px;
+     }
+     /*-------- Coches ------*/
+     .Imagen4{
+          float:none;
+          display:block;
+          margin-right:auto;
+          margin-left:auto;
+          padding-right:15px;
+          padding-left:15px;
+          width:740px;
+          padding-bottom: 15px;
+     }
+     .Imagen5{
+          float:none;
+          display:block;
+          margin-right:auto;
+          margin-left:auto;
+          padding-right:15px;
+          padding-left:15px;
+          width:740px;
+          padding-bottom: 15px;
+     }
+     .Imagen6{
+          float:none;
+          display:block;
+          margin-right:auto;
+          margin-left:auto;
+          padding-right:15px;
+          padding-left:15px;
+          width:740px;
+          padding-bottom: 15px;
+     }
+     .Imagen7{
+          float:none;
+          display:block;
+          margin-right:auto;
+          margin-left:auto;
+          padding-right:15px;
+          padding-left:15px;
+          width:740px;
+          padding-bottom: 15px;
+     }
+}
